# pim-problemas

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
busqueda-app/: Cargo.toml  Trunk.toml  busqueda.css  problemas-buscar.html  table.css
busqueda-app/src/: bindgen.rs  commands.rs  field_display.rs  field_edit_entry.rs  field_selector.rs  handle_db.rs  helper.rs  home_button.rs  main.rs  main_menu.rs  raw_html.rs  requests.rs  view_db.rs
html/: styles.css  table.js
parse_bin/: Cargo.toml  Datos.csv  Datos.html  data.json  database.json  paquetes_juntos.tex  regex.txt  test.html
parse_bin/src/: arguments.rs  main.rs
parse_lib/: Cargo.toml
parse_lib/src/: commands.rs  data.rs  fields.rs  files.rs  html.rs  lib.rs  merge.rs  parsing.rs  pdflatex.rs  preamble.rs  process_tex.rs  regex.rs  run_latex.rs  sql.rs  table_friendly.rs
parse_lib/src/data/: enunciado.rs  packages.rs
pim-aplicacion/: Cargo.toml  expanded.rs  index.html  style.css  table.css
pim-aplicacion/src/: add_filters.rs  app.rs  aux.rs  column_select.rs  commands.rs  edit_entry.rs  field_display.rs  field_edit_entry.rs  field_selector.rs  files_info.rs  helper.rs  home_button.rs  main.rs  main_menu.rs  raw_html.rs  start.rs  update.rs  update_db.rs  view_db.rs
pim-aplicacion/src-tauri/: Cargo.toml  tauri.conf.json
pim-aplicacion/src-tauri/icons/: icon.icns
pim-aplicacion/src-tauri/input/: database.json
pim-aplicacion/src-tauri/src/: main.rs
pim_bin/: Cargo.toml  regex.txt
pim_bin/src/: arguments.rs  main.rs
pim_lib/: Cargo.toml
pim_lib/src/: commands.rs  data.rs  fields.rs  files.rs  lib.rs  merge.rs  parse_sheets.rs  parsing.rs  pdflatex.rs  preamble.rs  sql.rs  table_friendly.rs  topics.rs
pim_lib/src/data/: enunciado.rs
pim_lib/src/files/: errors.rs
pim_yew/: Cargo.toml
pim_yew/src/: add_filters.rs  callbacks.rs  cart.rs  edit_entry.rs  extern_functions.rs  field_display.rs  field_edit_entry.rs  lib.rs  raw_html.rs  reload_button.rs  result_range.rs  sheet_editor.rs  sheets.rs  view_db.rs
