[package]
name = "parse_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
log = "0.4.17"

parse_lib = {path = "../parse_lib"}
pretty_env_logger = "0.4.0"
serde_json = "1.0.87"
termion = "2.0.1"
