[package]
name = "parse_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
encoding_rs = "0.8.31"
regex = "1.6.0"
serde = { version = "1.0.147", features = ["derive"] }

serde_json = "1.0.87"


katex = { version = "0.4.4", optional = true, default-features = false }

[features]
default = ["desktop"]
wasm = ["katex/wasm-js"]
desktop = ["katex/quick-js"]