[package]
name = "parse_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
colored = "2.0.0"
csv = "1.1.6"
encoding_rs = "0.8.31"
enum-utils = "0.1.2"
regex = "1.6.0"
serde = { version = "1.0.147", features = ["derive"] }

serde_json = "1.0.87"
termion = "2.0.1"


